[package]
name = "ddupe"
version = "1.1.0"
edition = "2024"
description = "Fast, cross-platform CLI for finding and removing duplicate files by content hash."
license = "LGPL-3.0-or-later"
repository = "https://github.com/Morrolan/ddupe"
homepage = "https://github.com/Morrolan/ddupe"
readme = "README.md"
documentation = "https://docs.rs/ddupe"
keywords = ["duplicate", "files", "hash", "cli", "cleanup"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "/.gitattributes",
    "/.gitignore",
    "/.github",
    "/.rmv",
    "/.vscode",
    "/target",
]

[dependencies]
sha2 = "0.10"
walkdir = "2.5"
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
